# otas-python-sdk

./: .gitignore  README.md  pyproject.toml
otas/: __init__.py  auth.py  client.py  constants.py  exceptions.py  logger.py  middleware.py
otas.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
test/: db.sqlite3  manage.py
test/apis/: urls.py  views.py
test/testsdk/: asgi.py  settings.py  urls.py  wsgi.py
