[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "otas"
version = "0.1.0"
description = "Django middleware library for capturing Agent traffic and sending it to the OTAS platform."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "requests>=2.31",
    "django>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django",
    "black",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["otas*"]